--- a/index.html
+++ b/index.html
@@ -31,8 +31,9 @@
     <meta name='development web apps' content='My projects' />
     <link rel='icon' href='/nm.ico' />
     
+    <script src="https://cdn.tailwindcss.com"></script>
 
-    <script type="module" crossorigin src="./assets/index.8401f8ff.js"></script>
+    <script type="module" crossorigin src="./assets/index.fe359b02.js"></script>
     <link rel="stylesheet" href="./assets/index.942eff3a.css">
   </head>
   <body>
